...
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="TdL-nv-CnJ"/>
                                                        <constraint firstAttribute="width" constant="44" id="ldh-lZ-Nav"/>
                                                    </constraints>
                                                    <color key="tintColor" name="YP White"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="LikeButtonOff"/>
                                                    <connections>
                                                        <action selector="likeButtonDidTap" destination="pZ9-It-hcX" eventType="touchUpInside" id="aB1-tS-hyP"/>
                                                    </connections>
                                                </button>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZ7-qv-kLf" userLabel="Date Label
                                                    <rect key="frame" x="24" y="196" width="101.5" height="16"/>
...
                                    <constraint firstAttribute="width" secondItem="zhi-bd-D8I" secondAttribute="height" multiplier="1:1" id="oGR-vw-5Ry"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00D-ls-fGo">
                                <rect key="frame" x="16" y="657" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="lY1-3D-RfU"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" modalPresentationStyle="fullScreen" id="gY2-Sv-04l" customClass="WebViewViewController" customModule="ImageFeedIos" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="N9T-KQ-uaB">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="vQO-ep-HxQ">
                                <rect key="frame" x="0.0" y="52" width="414" height="844"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
                        <subviews>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" minimumZoomScale="0.0" translatesAutoresizingMaskIntoConstraints="NO" id="abt-BJ-qaZ">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="tuE-3K-vBu">
                                        <rect key="frame" x="0.0" y="0.0" width="271" height="352"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fullImage"/>
                                    </imageView>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="tuE-3K-vBu" firstAttribute="leading" secondItem="abt-BJ-qaZ" secondAttribute="leading" id="Jjw-bY-2cT"/>
                                    <constraint firstAttribute="bottom" secondItem="tuE-3K-vBu" secondAttribute="bottom" id="LkT-zb-buZ"/>
                                    <constraint firstAttribute="trailing" secondItem="tuE-3K-vBu" secondAttribute="trailing" id="QQI-Ea-lI4"/>
...
                                <connections>
                                    <outlet property="delegate" destination="mek-MM-uCh" id="vRT-8b-fYG"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HLc-0b-AdH">
                                <rect key="frame" x="8" y="8" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="BLy-jD-Q7E"/>
                                    <constraint firstAttribute="width" secondItem="HLc-0b-AdH" secondAttribute="height" multiplier="1:1" id="row-wB-VuO"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
